[workspace]
members = [
  "channels",
  "channels/bench",
  "channels/miri",
  "cache",
  "ioc",
  "logging",
]
exclude = []

resolver = "2"

[workspace.package]
edition = "2024"
license = "MPL-2.0"
authors = ["Excerion Sun <dev@excsn.com>"]
homepage = "https://github.com/excsn/fibre"
repository = "https://github.com/excsn/fibre"

[workspace.dependencies]
bench_matrix = { version = "0" }
criterion = { version = "0.8", features = ["html_reports"] }

[profile.release]
debug = true

# Optional: For faster compile times during development
[profile.dev]
opt-level = 1
debug = true

# [profile.dev.package."*"]
# opt-level = 3 # Compile dependencies with optimizations