[package]
name = "fibre_cache"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Excerion Sun <dev@excsn.com>"]

description = "A high-performance, concurrent, sync/async cache for Rust, featuring a TinyLFU eviction policy, an atomic `entry` API, and support for non-cloneable values."
repository = "https://github.com/excsn/fibre"
readme = "README.md"
keywords = ["cache", "caching", "tinylfu", "lfu", "concurrent"]
categories = ["caching", "concurrency", "asynchronous", "data-structures", "memory-management"]

[dependencies]
fibre = { version = "^0", path = "../channels" }
# Core dependencies for concurrency and performance
parking_lot = "^0.12"
crossbeam-utils = "^0.8"
futures-util = "^0.3"
ahash = "^0.8"
num_cpus = "^1"

once_cell = "1.17"

serde = { version = "^1.0", features = ["derive"], optional = true }

[dev-dependencies]
bincode = "1.3"

[features]
default = ["serde"]
serde = ["dep:serde"]