[package]
name = "fibre_cache"
version = "0.5.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Excerion Sun <dev@excsn.com>"]

description = "Best in-class comprehensive, high-performance, concurrent multi mode sync/async caching library for Rust. Inspired by Java's Caffeine, it provides a rich, ergonomic API including a runtime-agnostic CacheLoader, an atomic `entry` API, and a wide choice of modern eviction policies like TinyLFU and SIEVE."
repository = "https://github.com/excsn/fibre"
readme = "README.md"
keywords = ["cache", "caching", "tinylfu", "lfu", "concurrent"]
categories = ["caching", "concurrency", "asynchronous", "data-structures", "memory-management"]

[dependencies]
fibre = { version = "^0", path = "../channels" }

ahash = "^0.8"
rapidhash = { version = "^1.4", optional = true }
once_cell = "^1.17"

# Core dependencies for concurrency
parking_lot = "^0.12"
crossbeam-utils = "^0.8"
futures-util = "^0.3"
num_cpus = "^1"
generational-arena = "^0.2"

rayon = { version = "1.8", optional = true }
rand = { version = "^0.9", optional = true }
serde = { version = "^1.0", features = ["derive"], optional = true }
tokio = { version = "^1", features = ["rt", "rt-multi-thread"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
bench_matrix = "^0"

bincode = "1.3"
futures-executor = "^0.3"
tokio = { version = "^1", features = ["macros", "sync", "time"] }

rand_distr = "^0.5"
rand_pcg = "^0.9"

[features]
full = ["serde", "random", "bulk", "tokio", "rapidhash"]
default = ["full"]
serde = ["dep:serde"]
random = ["dep:rand"]
bulk = ["dep:rayon"]
tokio = ["dep:tokio"]
rapidhash = ["dep:rapidhash"]

[[bench]]
name = "async_basic_ops"
harness = false

[[bench]]
name = "sync_basic_ops"
harness = false

[[bench]]
name = "async_general"
harness = false

[[bench]]
name = "sync_general"
harness = false