[package]
name = "fibre"
version = "0.5.2"

description = "High-performance, safe, memory-efficient sync/async channels built for real-time, low-overhead communication in concurrent Rust applications."
readme = "README.md"
keywords = ["channel", "mpmc", "spsc", "communication", "concurrent"]
categories = ["concurrency", "asynchronous", "data-structures"]

edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

exclude = [
  "/docs/"
]

[features]
default = ["topic"]
topic = ["dep:papaya"]
fibre_logging = ["dep:tokio"]

[dependencies]
lazy_static = "^1"

futures-core = { version = "^0.3", default-features = false, features = ["alloc", "std"] }
futures-intrusive = "^0.5"
futures-util = { version = "^0.3", default-features = false, features = ["alloc", "std"] }
parking_lot = "^0.12"
tokio = { version = "^1", features = ["full"], optional = true }

papaya = { version = "^0", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
bench_matrix = "0"
tokio = { version = "1", features = ["full"] }
serial_test = "^3"
rand = "0.9"
# proptest = "1"

[[bench]]
name = "mpmc_async"
harness = false

[[bench]]
name = "mpmc_sync"
harness = false

[[bench]]
name = "mpsc_async"
harness = false

[[bench]]
name = "mpsc_sync"
harness = false

[[bench]]
name = "mpsc_v2_async"
harness = false

[[bench]]
name = "mpsc_v2_sync"
harness = false


[[bench]]
name = "oneshot"
harness = false

[[bench]]
name = "spmc_async"
harness = false

[[bench]]
name = "spmc_sync"
harness = false

[[bench]]
name = "spsc_async"
harness = false

[[bench]]
name = "spsc_sync"
harness = false

[[bench]]
name = "topic_spmc_async"
harness = false
required-features = ["topic"]

[[bench]]
name = "topic_spmc_sync"
harness = false
required-features = ["topic"]

[[test]]
name = "topic_spmc_async"
required-features = ["topic"]

[[test]]
name = "topic_spmc_sync"
required-features = ["topic"]

# Optional: For faster compile times during development
[profile.dev]
opt-level = 1
debug = true

# [profile.dev.package."*"]
# opt-level = 3 # Compile dependencies with optimizations