[package]
name = "fibre"
version = "0.6.0"

description = "High-performance, safe, memory-efficient sync/async channels built for real-time, low-overhead communication in concurrent Rust applications."
readme = "README.md"
keywords = ["channel", "mpmc", "spsc", "communication", "concurrent"]
categories = ["concurrency", "asynchronous", "data-structures"]

edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

exclude = [
  "/docs/"
]

[features]
default = ["topic"]
topic = ["dep:papaya"]
diagnostics = ["dep:tokio"]

[dependencies]
lazy_static = "^1"

futures-core = { version = "^0.3", default-features = false, features = ["alloc", "std"] }
futures-intrusive = "^0.5"
futures-util = { version = "^0.3", default-features = false, features = ["alloc", "std"] }
parking_lot = "^0.12"
tokio = { version = "^1", features = ["full"], optional = true }

papaya = { version = "^0", optional = true }

# Loom: only compiled under `RUSTFLAGS="--cfg loom"`
[target.'cfg(loom)'.dependencies]
loom = "0.7"

# `Don't warn `unexpected_cfgs` on every #[cfg(loom)] gate.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(loom)"] }

[dev-dependencies]
criterion = { workspace = true }
bench_matrix = { workspace = true }
tokio = { version = "1", features = ["full"] }
serial_test = "^3"
rand = "0.9"
# proptest = "1"

[[bench]]
name = "mpmc_bounded"
harness = false

[[bench]]
name = "mpmc_rendezvous"
harness = false

[[bench]]
name = "mpmc_unbounded"
harness = false

[[bench]]
name = "mpsc_bounded"
harness = false

[[bench]]
name = "mpsc_unbounded"
harness = false

[[bench]]
name = "mpsc_rendezvous"
harness = false

[[bench]]
name = "oneshot"
harness = false

[[bench]]
name = "spmc_async"
harness = false

[[bench]]
name = "spmc_sync"
harness = false

[[bench]]
name = "spsc_bounded"
harness = false

[[bench]]
name = "topic_spmc_async"
harness = false
required-features = ["topic"]

[[bench]]
name = "topic_spmc_sync"
harness = false
required-features = ["topic"]

[[test]]
name = "topic_spmc_async"
required-features = ["topic"]

[[test]]
name = "topic_spmc_sync"
required-features = ["topic"]