[package]
name = "fibre_logging"
version = "0.5.1"

description = "A flexible, multimode sync/async logging library that unifies the log and tracing ecosystems, driven by external configuration and featuring powerful debug instrumentation."
readme = "README.md"
keywords = ["logging", "tracing", "telemetry", "structured-logging", "configuration"]
categories = ["development-tools::debugging", "config"]

edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
# For core tracing and log integration
tracing = { version = "^0.1", features = ["max_level_trace"] }
tracing-appender = "^0.2"
tracing-core = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["fmt", "env-filter", "registry"] }
log = "^0.4"
tracing-log = "^0.2"

# For configuration parsing
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
serde_json = "^1"

# Utils
chrono = { version = "^0.4", features = ["serde"] }
flate2 = "^1"
humantime = "^2"
regex = "1"
thiserror = "^2"

once_cell = "^1"
parking_lot = "^0.12"

fibre = { version = "^0.5", path = "../channels" }

[dev-dependencies]
# For testing
pretty_assertions = "^1.4" # For nicer diffs in tests
tempfile = "^3"
# tokio = { version = "^1", features = ["full"] } # We'll add this when testing async parts