[package]
name = "fibre_telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
# For core tracing and log integration
tracing = "^0.1"
tracing-appender = "^0.2"
tracing-core = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["fmt", "env-filter", "registry"] }
log = "^0.4"
tracing-log = "^0.2"

# For configuration parsing
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
serde_json = "^1"

# Utils
chrono = { version = "^0.4", features = ["serde"] }
regex = "1"
thiserror = "^2"

once_cell = "^1"
parking_lot = "^0.12"

fibre = { path = "../channels" }

[dev-dependencies]
# For testing
pretty_assertions = "^1.4" # For nicer diffs in tests
tempfile = "^3"
# tokio = { version = "^1", features = ["full"] } # We'll add this when testing async parts