[package]
name = "fibre_telemetry"
version = "0.5.0"
edition = "2021"

[dependencies]
# For core tracing and log integration
tracing = { version = "^0.1", features = ["max_level_trace"] }
tracing-appender = "^0.2"
tracing-core = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["fmt", "env-filter", "registry"] }
log = "^0.4"
tracing-log = "^0.2"

# For configuration parsing
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
serde_json = "^1"

# Utils
chrono = { version = "^0.4", features = ["serde"] }
flate2 = "^1"
humantime = "^2"
regex = "1"
thiserror = "^2"

once_cell = "^1"
parking_lot = "^0.12"

fibre = { version = "^0.4", path = "../channels" }

[dev-dependencies]
# For testing
pretty_assertions = "^1.4" # For nicer diffs in tests
tempfile = "^3"
# tokio = { version = "^1", features = ["full"] } # We'll add this when testing async parts